@@ -1,6 +1,6 @@
 {
-  "count": 18,
-  "uniques": 8,
+  "count": 19,
+  "uniques": 9,
   "views": [
     {
       "timestamp": "2022-05-21T00:00:00Z",
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2022-06-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
